[package]
name = "crust"
version = "0.1.0"
authors = ["onehrxn <waharaxn@gmail.com>"]
edition = "2018"

[dependencies.structopt]
version = "0.2.15"

[dependencies.lazy_static]
version = "1.3.0"

[features]
debug = []
ast = []
source = []
token = []
as = []

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_lexer"
harness = false
[[bench]]
name = "bench_cpp"
harness = false
[[bench]]
name = "bench_parser"
harness = false
