[package]
name = "crust"
version = "0.1.0"
authors = ["onehrxn <waharaxn@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
clap = "2.33.0"
regex = "1.3.5"
log = "0.4"
simple_logger = "1.4.0"
loggerv = "0.7"

[features]
debug = []
ast = []
source = []
token = []
as = []

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_lexer"
harness = false
[[bench]]
name = "bench_cpp"
harness = false
[[bench]]
name = "bench_parser"
harness = false
